Stash current work

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       <div class="score">Score: <span id="points">0</span></div>
       <a href="#" class="btn" id="start">Start</a>
     </aside>
+    <div>
+      <div class="message"></div>
 <canvas id="board" width="300" height="600">
+    </div>
   
 </canvas>   </main>
   </body>
