--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     <canvas id="next-block" width="100" height="100"></canvas>
       <div class="score">Score: <span id="points">0</span></div>
       <a href="#" class="btn" id="start">Start</a>
+      <div id="message">
+        Refresh the page to restart the game.
+      </div>
     </aside>
     <div>
-      <div class="message"></div>
 <canvas id="board" width="300" height="600">
-    </div>
   
 </canvas>   </main>
   </body>
