Update README and add instructions

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
       <div class="score">Score: <span id="points">0</span></div>
       <a href="#" class="btn" id="start">Start</a>
       <div id="message">
-        Refresh the page to restart the game.
+       <p> <b>ROTATIONS</b>: Use <b>d</b> for counter-clockwise rotations, and <b>f</b> for clockwise rotations.</p>
+        <p> <b>MOVEMENT</b>: Use the <b>left</b>, <b>right</b> and <b>down</b> arrow keys to move the blocks.</p>
+
+        <p>Refresh the page to restart the game.</p>
+
+       <p><small>Colour scheme is <a href="https://chriskempson.github.io/base16/">base16 (flat)</a></small></p>
       </div>
     </aside>
     <div>
